Ajuste no filtro e crição de testes

--- a/Livraria.Tests/Livraria.Tests.csproj
+++ b/Livraria.Tests/Livraria.Tests.csproj
@@ -18,4 +18,10 @@
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="LIVRARIA.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
